# stm32-rs

./: .gitattributes  .gitignore  .prettierrc.toml  .travis.yml  CHANELOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  Makefile.toml  README.md  bors.toml  build.rs  requirements.txt  rustfmt.toml  stm32_part_table.yaml  svd2rust.toml
.github/: bors.toml
.github/workflows/: README-nightlies.md  cargo-make.yaml  changelog.yaml  ci.yaml  gh-pages.yaml  mmaps_master.yaml  mmaps_pr.yaml  mmaps_pr_compare.yaml  mmaps_pr_generate.yaml  nightlies.yaml
cortex_m/: .gitignore  Makefile  README.md  armv6m.svd  armv6m.yaml  armv7em.svd  armv7em.yaml  armv7m.svd  armv7m.yaml  armv8m.svd  armv8m.yaml
cortex_m/peripherals/: cpb.yaml  cpuid_v6.yaml  cpuid_v7.yaml  dcb.yaml  dwt.yaml  fpb.yaml  fpu.yaml  itm.yaml  mpu.yaml  nvic.yaml  nvic_v6.yaml  nvic_v7.yaml  scb.yaml  scb_v7.yaml  syst.yaml  tpiu.yaml
devices/: gd32f1x0.yaml  stm32c011.yaml  stm32c031.yaml  stm32c051.yaml  stm32c071.yaml  stm32c091.yaml  stm32c092.yaml  stm32f0x0.yaml  stm32f0x1.yaml  stm32f0x2.yaml  stm32f0x8.yaml  stm32f100.yaml  stm32f101.yaml  stm32f102.yaml  stm32f103.yaml  stm32f107.yaml  stm32f215.yaml  stm32f217.yaml  stm32f301.yaml  stm32f302.yaml  stm32f303.yaml  stm32f373.yaml  stm32f3x4.yaml  stm32f3x8.yaml  stm32f401.yaml  stm32f405.yaml  stm32f407.yaml  stm32f410.yaml  stm32f411.yaml  stm32f412.yaml  stm32f413.yaml  stm32f415.yaml  stm32f417.yaml  stm32f423.yaml  stm32f427.yaml  stm32f429.yaml  stm32f437.yaml  stm32f439.yaml  stm32f446.yaml  stm32f469.yaml  (+155 more)
devices/common_patches/: 16bit.yaml  16bit_with_mask.yaml  2_nvic_prio_bits.yaml  3_nvic_prio_bits.yaml  4_nvic_prio_bits.yaml  c0.yaml  dbgmcu.yaml  dbgmcu_rename.yaml  delete_dfsdm.yaml  dma_fcr_wo.yaml  dma_interrupt_names.yaml  dsi.yaml  ethernet_mac_regs.yaml  ethernet_macmiidr.yaml  ethernet_mmc.yaml  f0_adc_cfgr2_ckmode.yaml  f0_adc_fixes.yaml  f0_comp_common.yaml  f0_crc_init_addr_fix.yaml  f0_dmaen.yaml  f0_gpioe.yaml  f0_hsi48cal.yaml  f0_no_hdmi_cec.yaml  f0_ram_parity_check.yaml  f0_syscfg.yaml  f0_syscfg_common.yaml  f0_syscfg_comp - Copy.yaml  f0_syscfg_comp.yaml  f0_usart3.yaml  f0_usart6.yaml  f0_usart78.yaml  f0_usben.yaml  f0_v18pwrrstf.yaml  f1_ethernet.yaml  f1_uart45.yaml  f2_f4_ethernet.yaml  f2_rcc.yaml  f3_adc.yaml  f3_adc_multi_dual.yaml  f3_comp1234567.yaml  (+209 more)
devices/fields/: hdmi_cec.yaml
devices/patches/: c0.yaml  f0_syscfg_comp.yaml  f7_interrupts.yaml  f7_lptim_interrupt.yaml  g0_remove_core.yaml  g0_strip.yaml  g0x1_strip.yaml  h5.yaml  h523_h533.yaml  h56x_h57x.yaml  h5_security.yaml  h743_hrtim_common.yaml  h7_common_dualcore.yaml  h7_common_highmemory.yaml  h7_common_singlecore.yaml  h7_common_singlecore_735.yaml  h7rs_strip.yaml  mpu_unprefix_registers.yaml  remove_l0_scb.yaml  remove_l0_stk.yaml  u5.yaml
enums/: stm32c011.yaml  stm32c031.yaml  stm32c071.yaml  stm32f469.yaml  stm32g030.yaml  stm32g031.yaml  stm32g050.yaml  stm32g051.yaml  stm32g061.yaml  stm32g070.yaml  stm32g071.yaml  stm32g081.yaml  stm32g0b0.yaml  stm32g0b1.yaml  stm32g0c1.yaml  stm32g484.yaml  stm32h503.yaml  stm32h523.yaml  stm32h533.yaml  stm32h562.yaml  stm32h563.yaml  stm32h573.yaml  stm32h723.yaml  stm32h725.yaml  stm32h750.yaml  stm32h753v.yaml  stm32h7a3.yaml  stm32h7b0.yaml  stm32h7b3.yaml  stm32h7r.yaml  stm32h7s.yaml  stm32l412.yaml  stm32l4r5.yaml  stm32l4r9.yaml  stm32l4x2.yaml  stm32l4x6.yaml  stm32n645.yaml  stm32n647.yaml  stm32n655.yaml  stm32n657.yaml  (+11 more)
gd32f1/: Cargo.toml  README.md  build.rs
gd32f1/src/: lib.rs
gd32f1/src/gd32f1x0/: device.x
independent_peripherals/dfsdm/: README.md  dfsdm_RM0432_L4Rxxx_L4Sxxx.yaml  dfsdm_RM0436.yaml  dfsdm_RM0455.yaml  dfsdm_interrupts.yaml  dfsdm_interrupts_byRM.yaml
peripherals/: hdmi_cec.yaml  hsem_wle.yaml
peripherals/adc/: adc_aditf4_v1_1.yaml  adc_aditf4_v1_1_RM0091.yaml  adc_array.yaml  adc_f1.yaml  adc_f1_common.yaml  adc_f1_f37x.yaml  adc_f37x.yaml  adc_h5.yaml  adc_h7_adc3.yaml  adc_h7_revision_v.yaml  adc_h7_revision_v_12.yaml  adc_h7_revision_y.yaml  adc_l0.yaml  adc_u5.yaml  adc_v2.yaml  adc_v2_multi.yaml  adc_v2_single.yaml  adc_v2_smpr.yaml  adc_v3.yaml  adc_v3_common.yaml  adc_v3_common_f3.yaml  adc_v3_common_f3_single.yaml  adc_v3_common_g4.yaml  adc_v3_common_h7.yaml  adc_v3_common_l4+.yaml  adc_v3_common_mp1.yaml  adc_v3_common_single.yaml  adc_v3_f3.yaml  adc_v3_g4.yaml  adc_v3_h7.yaml  adc_v3_h7_12.yaml  adc_v3_h7_123.yaml  adc_v3_h7_full.yaml  adc_v3_h7_reduced.yaml  adc_v3_l4+.yaml  adc_v3_l4.yaml  adc_v3_mp1.yaml  adc_v3_multi.yaml  adc_v3_multi_f3.yaml  adc_v3_multi_h7.yaml  (+2 more)
peripherals/aes/: aes256.yaml  aes_common.yaml  aes_l0.yaml  aes_l4+.yaml  aes_l4p5.yaml  aes_wl.yaml  chmod2b.yaml  chmod3b.yaml  common.yaml  cr_irq.yaml  v1.yaml  v2.yaml  v3.yaml
peripherals/axi/: axi_v1.yaml
peripherals/bkp/: bkp.yaml
scripts/: comparesvd.py  group.py  htmlcomparesvd.py  htmlcomparesvdall.sh  interrupts.py  makecrates.py  makedeps.py  makehtml.index.template.html  makehtml.py  makehtml.template.html  makejson.py  makesettings.sh  matchperipherals.py  nodesc.py  periphtemplate.py  svd2rust_install.sh  svdmmap.py  svdpatch.py  timer_hierarchy.py  tool_install.sh  viewgroups.html
stm32f0/: Cargo.toml  README.md  build.rs
stm32f0/src/: lib.rs
stm32f1/: Cargo.toml  README.md  build.rs
stm32f1/src/: lib.rs
stm32f2/: Cargo.toml  README.md  build.rs
stm32f2/src/: lib.rs
stm32f3/: Cargo.toml  README.md  build.rs
stm32f3/src/: lib.rs
stm32f4/: Cargo.toml  README.md  build.rs
stm32f4/src/: lib.rs
stm32f7/: Cargo.toml  README.md  build.rs
stm32f7/src/: lib.rs
stm32g0/: Cargo.toml  README.md  build.rs
stm32g4/: Cargo.toml  README.md  build.rs
stm32h7/: Cargo.toml  README.md  build.rs
stm32h7/src/: lib.rs
stm32l0/: Cargo.toml  README.md  build.rs
stm32l0/src/: lib.rs
stm32l1/: Cargo.toml  README.md  build.rs
stm32l1/src/: lib.rs
stm32l4/: Cargo.toml  README.md  build.rs
stm32l4/src/: lib.rs
svd/: .gitignore  README.md  cmsis-svd.xsd  download.sh  extract.ds  extract.sh
(+2180 files in other folders)
