[package]
name = "stm32"
version = "0.6.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Device support crates for STM32 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[lib]
path = "src/lib.rs"

[build-dependencies]
svd2rust = { git = "https://github.com/rust-embedded/svd2rust", rev = "77da805eb1afc4dcb5fd04ec992cde71b32d3832" }
zip = "0.3"

[dependencies]
bare-metal = "0.2.4"
vcell = "0.1.0"
cortex-m = "0.5.8"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.7"

[features]
default = ["patch"]
fmt = []
nightly = []
patch = []
rt = ["cortex-m-rt/device"]
stm32f0x0 = []
stm32f0x1 = []
stm32f0x2 = []
stm32f0x8 = []
stm32f100 = []
stm32f101 = []
stm32f102 = []
stm32f103 = []
stm32f107 = []
stm32f215 = []
stm32f217 = []
stm32f301 = []
stm32f302 = []
stm32f303 = []
stm32f373 = []
stm32f3x4 = []
stm32f3x8 = []
stm32f401 = []
stm32f405 = []
stm32f407 = []
stm32f410 = []
stm32f411 = []
stm32f412 = []
stm32f413 = []
stm32f427 = []
stm32f429 = []
stm32f446 = []
stm32f469 = []
stm32f7x2 = []
stm32f7x3 = []
stm32f7x5 = []
stm32f7x6 = []
stm32f7x7 = []
stm32f7x9 = []
stm32g0x0 = []
stm32g0x1 = []
stm32h7x3 = []
stm32l0x1 = []
stm32l0x2 = []
stm32l0x3 = []
stm32l100 = []
stm32l151 = []
stm32l162 = []
stm32l4x1 = []
stm32l4x2 = []
stm32l4x3 = []
stm32l4x5 = []
stm32l4x6 = []
