[package]
name = "stm32f1"
version = "0.4.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Device support crates for STM32F1 devices"
repository = "https://github.com/adamgreig/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "0.2.3"
vcell = "0.1.0"
cortex-m = "0.5.7"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.4"

[package.metadata.docs.rs]
features = ['rt', 'stm32f100', 'stm32f101', 'stm32f102', 'stm32f103', 'stm32f107']

[features]
default = []
rt = ["cortex-m-rt/device"]
stm32f100 = []
stm32f101 = []
stm32f102 = []
stm32f103 = []
stm32f107 = []
