[package]
name = "stm32f2"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Device support crates for STM32F2 devices"
repository = "https://github.com/adamgreig/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "0.1.1"
vcell = "0.1.0"
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"

[features]
default = []
rt = []
stm32f215 = []
stm32f217 = []
