[package]
edition = "2018"
name = "stm32h7"
version = "0.7.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Device support crates for STM32H7 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "0.2.4"
vcell = "0.1.0"
cortex-m = ">=0.5.8,<0.7"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.8"

[package.metadata.docs.rs]
features = ['rt', 'stm32h743', 'stm32h753']

[features]
default = []
rt = ["cortex-m-rt/device"]
stm32h743 = []
stm32h743v = []
stm32h753 = []
stm32h753v = []
