[package]
name = "stm32l1"
version = "0.1.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Support crates for STM32L1 devices"
repository = "https://github.com/adamgreig/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
cortex-m = "0.2.7"
vcell = "0.1.0"

[features]
default = []
stm32l100 = []
stm32l151 = []
stm32l162 = []
