[package]
name = "stm32l4"
version = "0.2.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Device support crates for STM32L4 devices"
repository = "https://github.com/adamgreig/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "0.2.0"
vcell = "0.1.0"
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"

[features]
default = []
rt = []
stm32l4x1 = []
stm32l4x2 = []
stm32l4x3 = []
stm32l4x6 = []
