[package]
name = "stm32l4"
version = "0.6.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
description = "Device support crates for STM32L4 devices"
repository = "https://github.com/stm32-rs/stm32-rs"
readme = "README.md"
keywords = ["stm32", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"

[dependencies]
bare-metal = "0.2.4"
vcell = "0.1.0"
cortex-m = "0.5.8"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.7"

[package.metadata.docs.rs]
features = ['rt', 'stm32l4x1', 'stm32l4x5']

[features]
default = []
rt = ["cortex-m-rt/device"]
stm32l4x1 = []
stm32l4x2 = []
stm32l4x3 = []
stm32l4x5 = []
stm32l4x6 = []
